--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kolm-serve",
   "type": "module",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "scripts": {
     "build": "tsc",
     "db:generate": "drizzle-kit generate",
@@ -11,25 +11,27 @@
     "db:seed": "npx tsx src/db/seed.ts ",
     "db:seed:dev": "npx tsx src/db/seed.dev.ts ",
     "db:studio": "drizzle-kit studio",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "format": "npx @biomejs/biome format --write .",
+    "lint": "npx @biomejs/biome lint --write ."
   },
   "dependencies": {
-    "@hono/node-server": "1.14.1",
-    "@hono/trpc-server": "0.3.4",
-    "@trpc/server": "11.1.1",
-    "better-auth": "1.2.7",
-    "dotenv": "16.5.0",
-    "drizzle-orm": "0.43.1",
-    "drizzle-seed": "0.3.1",
-    "hono": "4.7.8",
-    "pg": "8.15.6",
-    "superjson": "2.2.2"
+    "@hono/node-server": "^1.14.2",
+    "@hono/trpc-server": "^0.3.4",
+    "@trpc/server": "^11.1.2",
+    "better-auth": "^1.2.8",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
+    "drizzle-seed": "^0.3.1",
+    "hono": "^4.7.10",
+    "pg": "^8.16.0",
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "22.15.3",
-    "drizzle-kit": "0.31.0",
-    "tsx": "4.19.3",
-    "typescript": "5.8.3"
+    "@biomejs/biome": "^1.9.4",
+    "@types/node": "^22.15.21",
+    "drizzle-kit": "^0.31.1",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
