--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
   "name": "kolm-serve",
   "type": "module",
-  "version": "0.9.2",
+  "version": "1.0.0",
   "scripts": {
     "build": "tsc",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:reset": "npx tsx src/db/reset.ts ",
-    "db:seed": "npx tsx src/db/seed.ts ",
-    "db:seed:dev": "npx tsx src/db/seed.dev.ts ",
+    "db:reset": "tsx src/db/reset.ts ",
+    "db:seed": "tsx src/db/seed.ts ",
+    "db:seed:dev": "tsx src/db/seed.dev.ts ",
     "db:studio": "drizzle-kit studio",
     "dev": "tsx watch src/index.ts",
     "format": "npx @biomejs/biome format --write .",
     "lint": "npx @biomejs/biome lint --write ."
   },
   "dependencies": {
-    "@hono/node-server": "^1.14.2",
-    "@hono/trpc-server": "^0.3.4",
-    "@trpc/server": "^11.1.2",
-    "better-auth": "^1.2.8",
-    "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.43.1",
+    "@hono/node-server": "^1.17.1",
+    "@hono/trpc-server": "^0.4.0",
+    "@trpc/server": "^11.4.3",
+    "better-auth": "^1.3.3",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.3",
     "drizzle-seed": "^0.3.1",
-    "hono": "^4.7.10",
-    "pg": "^8.16.0",
+    "hono": "^4.8.7",
+    "pg": "^8.16.3",
     "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@types/node": "^22.15.21",
-    "drizzle-kit": "^0.31.1",
-    "tsx": "^4.19.4",
+    "@biomejs/biome": "^2.1.2",
+    "@types/node": "^24.1.0",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
