--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kolm-serve",
   "type": "module",
-  "version": "1.0.1",
+  "version": "1.0.",
   "scripts": {
     "build": "tsc",
     "db:generate": "drizzle-kit generate",
@@ -13,25 +13,26 @@
     "db:studio": "drizzle-kit studio",
     "dev": "tsx watch src/index.ts",
     "format": "npx @biomejs/biome format --write .",
-    "lint": "npx @biomejs/biome lint --write ."
+    "lint": "npx @biomejs/biome lint --write .",
+    "typecheck": "npx tsc --noEmit"
   },
   "dependencies": {
-    "@hono/node-server": "^1.18.2",
+    "@hono/node-server": "^1.19.1",
     "@hono/trpc-server": "^0.4.0",
-    "@trpc/server": "^11.4.4",
-    "better-auth": "^1.3.6",
-    "dotenv": "^17.2.1",
-    "drizzle-orm": "^0.44.4",
+    "@trpc/server": "^11.5.0",
+    "better-auth": "^1.3.8",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "drizzle-seed": "^0.3.1",
-    "hono": "^4.9.1",
+    "hono": "^4.9.6",
     "pg": "^8.16.3",
     "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.1.4",
-    "@types/node": "^24.2.1",
+    "@biomejs/biome": "^2.2.2",
+    "@types/node": "^24.3.0",
     "drizzle-kit": "^0.31.4",
-    "tsx": "^4.20.4",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
 }
