--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kolm-serve",
   "type": "module",
-  "version": "1.0.",
+  "version": "1.0.1",
   "scripts": {
     "build": "tsc",
     "db:generate": "drizzle-kit generate",
@@ -17,22 +17,22 @@
     "typecheck": "npx tsc --noEmit"
   },
   "dependencies": {
-    "@hono/node-server": "^1.19.1",
+    "@hono/node-server": "^1.19.5",
     "@hono/trpc-server": "^0.4.0",
-    "@trpc/server": "^11.5.0",
-    "better-auth": "^1.3.8",
-    "dotenv": "^17.2.2",
+    "@trpc/server": "^11.6.0",
+    "better-auth": "^1.3.24",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.5",
     "drizzle-seed": "^0.3.1",
-    "hono": "^4.9.6",
+    "hono": "^4.9.9",
     "pg": "^8.16.3",
     "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.2",
-    "@types/node": "^24.3.0",
-    "drizzle-kit": "^0.31.4",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "@biomejs/biome": "^2.2.4",
+    "@types/node": "^24.6.1",
+    "drizzle-kit": "^0.31.5",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
